Add arrow click handler

--- a/roll.html
+++ b/roll.html
@@ -73,6 +73,40 @@
                 <button class="roll-button roll-arrow roll-arrow-right" aria-label="move-right" data-dir="-1"></button>
             </div>
         </div>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="roll" data-step="0">
+            <div class="roll-rail">
+                <ol class="roll-wrap">
+                    <li class="roll-pane">
+                        <div class="fpo">0</div>
+                    </li>
+                    <li class="roll-pane">
+                        <div class="fpo">1</div>
+                    </li>
+                    <li class="roll-pane">
+                        <div class="fpo">2</div>
+                    </li>
+                    <li class="roll-pane">
+                        <div class="fpo">3</div>
+                    </li>
+                </ol>
+            </div>
+            <div class="roll-control">
+                <button class="roll-button roll-arrow roll-arrow-left" aria-label="move-left" style="display:none" data-dir="1"></button>
+                <div class="roll-dots-wrap">
+                    <button data-step="0" aria-label="progress-dot-1" class="roll-button roll-dot is-active"></button>
+                    <button data-step="1" aria-label="progress-dot-2" class="roll-button roll-dot"></button>
+                    <button data-step="2" aria-label="progress-dot-3" class="roll-button roll-dot"></button>
+                    <button data-step="3" aria-label="progress-dot-4" class="roll-button roll-dot"></button>
+                </div>
+                <button class="roll-button roll-arrow roll-arrow-right" aria-label="move-right" data-dir="-1"></button>
+            </div>
+        </div>
+
     </div>
 
     <script src="roll.js"></script>
