--- a/roll.html
+++ b/roll.html
@@ -63,14 +63,14 @@
                 </ol>
             </div>
             <div class="roll-control">
-                <button class="roll-button roll-arrow roll-arrow-left" aria-label="move-left" style="display:none" data-dir="1"></button>
+                <button type="button" class="roll-button roll-arrow roll-arrow-left" aria-label="move-left" style="visibility:hidden" data-dir="1"></button>
                 <div class="roll-dots-wrap">
-                    <button data-step="0" aria-label="progress-dot-1" class="roll-button roll-dot is-active"></button>
-                    <button data-step="1" aria-label="progress-dot-2" class="roll-button roll-dot"></button>
-                    <button data-step="2" aria-label="progress-dot-3" class="roll-button roll-dot"></button>
-                    <button data-step="3" aria-label="progress-dot-4" class="roll-button roll-dot"></button>
+                    <button type="button" data-step="0" aria-label="progress-dot-1" class="roll-button roll-dot is-active"></button>
+                    <button type="button" data-step="1" aria-label="progress-dot-2" class="roll-button roll-dot"></button>
+                    <button type="button" data-step="2" aria-label="progress-dot-3" class="roll-button roll-dot"></button>
+                    <button type="button" data-step="3" aria-label="progress-dot-4" class="roll-button roll-dot"></button>
                 </div>
-                <button class="roll-button roll-arrow roll-arrow-right" aria-label="move-right" data-dir="-1"></button>
+                <button type="button" class="roll-button roll-arrow roll-arrow-right" aria-label="move-right" data-dir="-1"></button>
             </div>
         </div>
 
@@ -96,14 +96,14 @@
                 </ol>
             </div>
             <div class="roll-control">
-                <button class="roll-button roll-arrow roll-arrow-left" aria-label="move-left" style="display:none" data-dir="1"></button>
+                <button type="button" class="roll-button roll-arrow roll-arrow-left" aria-label="move-left" style="visibility:hidden" data-dir="1"></button>
                 <div class="roll-dots-wrap">
-                    <button data-step="0" aria-label="progress-dot-1" class="roll-button roll-dot is-active"></button>
-                    <button data-step="1" aria-label="progress-dot-2" class="roll-button roll-dot"></button>
-                    <button data-step="2" aria-label="progress-dot-3" class="roll-button roll-dot"></button>
-                    <button data-step="3" aria-label="progress-dot-4" class="roll-button roll-dot"></button>
+                    <button type="button" data-step="0" aria-label="progress-dot-1" class="roll-button roll-dot is-active"></button>
+                    <button type="button" data-step="1" aria-label="progress-dot-2" class="roll-button roll-dot"></button>
+                    <button type="button" data-step="2" aria-label="progress-dot-3" class="roll-button roll-dot"></button>
+                    <button type="button" data-step="3" aria-label="progress-dot-4" class="roll-button roll-dot"></button>
                 </div>
-                <button class="roll-button roll-arrow roll-arrow-right" aria-label="move-right" data-dir="-1"></button>
+                <button type="button" class="roll-button roll-arrow roll-arrow-right" aria-label="move-right" data-dir="-1"></button>
             </div>
         </div>
 
